# More_practice_on_Real-Time-ML-System

./: .gitignore  README.md
docker-compose/: Makefile  README.MD  backfill-pipeline.yml  feature-pipeline.yml  redpanda.yml
services/price_predictor/: .env  Dockerfile  Makefile  README.md  price_predictor_BTC_EUR_60s_5steps.joblib  pyproject.toml
services/price_predictor/src/: config.py  feature_engineering.py  hopsworks_api.py  model_registry.py  ohlc_data_reader.py  prediction.py  price_predictor.py  training.py  utils.py
services/price_predictor/src/models/: current_price_baseline.py  moving_average_baseline.py  xgboost_model.py
services/topic_to_feature_store/: .env  Dockerfile  Makefile  README.md  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml
services/topic_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: .env  Dockerfile  Makefile  README.md  historical.prod.env  live.prod.env  prod.env  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  main.py
services/trade_producer/src/trade_data_source/: __init__.py  base.py  init.py  kraken_rest_api.py  kraken_websocket_api.py  trade.py
services/trade_to_ohlc/: .env  Dockerfile  Makefile  README.md  dev.env  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  prod.env  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
