[tool.poetry]
name = "price-predictor"
version = "0.1.0"
description = ""
authors = ["gil612 <sgba000@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "1.26.4"
pandas = "2.1.4"
pyarrow = "14.0.1"
scikit-learn = "1.4.0"
hopsworks = "^4.1.5"
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
loguru = "0.7.2"
setuptools = "69.0.3"
comet-ml = "^3.49.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
