[tool.poetry]
name = "price_predictor"
version = "0.1.0"
description = "A price prediction service using technical analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.0"
pandas = "^2.0.0"
pyarrow = "14.0.1"
scikit-learn = "1.4.0"
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
loguru = "0.7.2"
hopsworks = "^4.1.5"
python-dotenv = "^1.0.0"
comet-ml = "^3.49.0"
setuptools = "69.0.3"
xgboost = "^2.1.4"
optuna = "^4.2.1"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
]
build-backend = "poetry.core.masonry.api"
