[tool.poetry]
name = "topic-to-feature-store"
version = "0.1.0"
description = "Service to store topic data in feature store"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
quixstreams = "^3.7.0"
loguru = "^0.7.2"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
hopsworks = "^4.1.5"
pandas = "<2.2.0"
arrow = "^1.3.0"
pyarrow = "^14.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
