[tool.poetry]
name = "topic_to_feature_store"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
quixstreams = "^3.7.0"
loguru = "^0.7.3"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
hopsworks = "^4.1.6"
pandas = "^2.1.4"
pyarrow = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
