[tool.poetry]
name = "trade_producer"
version = "0.1.0"
description = "Trade Producer Service for Real-time ML System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
quixstreams = "^2.10.0"
loguru = "^0.7.2"
websocket-client = "^1.8.0"
requests = "^2.32.3"
# Add your service's dependencies here
# For example:
# kafka-python = "^2.0.2"
# python-dotenv = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"