[tool.poetry]
name = "trade-to-ohlc"
version = "0.1.0"
description = "Service to convert trades to OHLC candlesticks"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
quixstreams = "^3.7.0"
loguru = "^0.7.2"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
